animate background-color, fix firefox

--- a/main.css
+++ b/main.css
@@ -1,14 +1,11 @@
-* {
-    transition: color .5s;
-}
-
 body {
     margin: 40px auto;
     max-width: 650px;
     line-height: 1.6;
     font-size:18px;
     color:#444;
-    padding: 0 10px
+    padding: 0 10px;
+    transition: background-color .5s, color .1s;
 }
 
 h1 {
@@ -75,4 +72,8 @@ p {
 
 #theme-changer {
     cursor: pointer;
+}
+
+#github-corner-svg {
+    transition: fill .5s, color .5s;
 }
